Section, insertAt and insertOnce management

--- a/src/test/resources/section/fragments/fragment1.java.html
+++ b/src/test/resources/section/fragments/fragment1.java.html
@@ -1,5 +1,5 @@
 @args(int myValue)
-<p>My value is @(myValue + 10)</p>
+<p>F1 My value is @(myValue + 10)</p>
 
 @insertAt("section1") {
     <p>From fragment1s1: @myValue</p>
