--- a/src/test/resources/section/fragments/fragment2.java.html
+++ b/src/test/resources/section/fragments/fragment2.java.html
@@ -1,7 +1,7 @@
 @args(int myValue)
 
 @insertAt("html") {
-    <p>My value is @(myValue + 20)</p>
+    <p>F2 My value is @(myValue + 20)</p>
 }
 
 @insertAt("section1") {
@@ -13,7 +13,7 @@
 }
 
 @insertAt("section3") {
-    <p>From fragment2s4: @myValue</p>
+    <p>From fragment2s3: @myValue</p>
 }
 
 @insertOnce("section1") {
